# rawseds_ros

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
calibration/: SVS_EXT_LR.yaml  SVS_L_01.yaml  SVS_R_01.yaml  stereo04.yaml
cmake/: rawseeds_ros_enable_c++17.cmake
data/: rawseeds_stereo_conversion_bm.yaml  rawseeds_stereo_conversion_sgbm.yaml  rviz-settings.rviz
include/rawseeds_ros/nodes/: calibration.hpp  stereo_matcher_node.h  tf_logger_node.h  undistortion.hpp
include/rawseeds_ros/tools/: dataset_aligner.hpp
launch/: benchmark_amcl.launch  benchmark_vamcl.launch  publish_initial_pose.sh  publish_initial_pose_sand.sh  request_global_localization.sh  rviz.launch  stereo.launch  stereo_cuda.launch  transforms.launch  transforms_biccoca.launch
msg/: RawseedsIMU.msg
scripts/: convert_lasers_imu_cartographer_gt_odom.sh  convert_lasers_imu_gt_ext_odom.sh  convert_lasers_imu_gt_odom.sh  convert_lasers_imu_odom.sh  download_torrents.py  groundtruth2bag.py  gtextodom2bag.py  gtodom2bag.py  hokuyo2bag.py  imu2bag.py  log_pose.py  log_pose_with_covariance.py  log_trajectory.py  log_trajectory_triggered.py  merge_bags.py  odometry2bag.py  playlive.py  publish_initial_pose_sand.sh  publish_initial_pose_v.sh  rawseedsIMU2IMU.py  sick2bag.py  stereo2bag.py  trajectory2relations.py
src/: camera2bag.cpp  stereo2bag.cpp  stereo2procbag.cpp  stereo_match.cpp  tune_stereo_matching.cpp
src/nodes/: calibration.hpp  cuda_matchers.hpp  disparity_filters.cpp  disparity_filters.hpp  fgs_filter.cpp  fgs_filter.hpp  pointcloud_filter_node.cpp  pointcloud_filter_node.h  stereo_camera_node.cpp  stereo_camera_node.h  stereo_matcher_cuda_node.cpp  stereo_matcher_cuda_node.h  stereo_matcher_node.cpp  stereo_matcher_node.h  tf_logger_node.cpp  tf_logger_node.h  undistortion.hpp  voxel.hpp
src/tools/: check_bag.cpp  stereo2bag.cpp  stereo2procbag.cpp
