<?xml version="1.0"?>
<package>
  <name>rawseeds_ros</name>
  <version>0.0.0</version>
  <description>Tools for using the rawseeds dataset in ROS</description>

  <maintainer email="sebastian.scherer@uni-tuebingen.de">Sebastian Scherer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  
  <export></export>
</package>
