<?xml version="2.0"?>
<package format="2">
  <name>rawseeds_ros</name>
  <version>0.0.1</version>
  <description>Tools for using the rawseeds dataset in ROS</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">Sebastian Scherer</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>camera_info_manager</depend>
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>stereo_msgs</depend>
  <depend>message_generation</depend>
  <depend>tf</depend>
  <depend>cslibs_utility</depend>
  <depend>cslibs_math_ros</depend>

  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
